fixed more findbugs issues